--- a/src/main/resources/db/changelog/db.changelog-data.yaml
+++ b/src/main/resources/db/changelog/db.changelog-data.yaml
@@ -1,5 +1,9 @@
 databaseChangeLog:
   - include:
-      file: db/changelog/init_data/V001_add_data_qlks_type_room.xml
+      file: db/changelog/init_data/V001_add_data_qlks_type_room.sql
   - include:
       file: db/changelog/init_data/V002_add_data_qlks_role.sql
+  - include:
+      file: db/changelog/init_data/V003_add_data_qlks_employee.sql
+  - include:
+      file: db/changelog/init_data/V004_add_data_qlks_user.sql
