--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'c3p0:c3p0:0.9.1.2'
 
+    implementation 'org.springframework.boot:spring-boot-starter-mail:2.5.4'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.5.4'
+
 //    Spring AOP + AspectJ
     runtimeOnly 'org.aspectj:aspectjweaver:1.9.7'
     implementation 'aspectj:aspectjrt:1.5.3'
