--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 heroku-server:
 spring:
   profiles:
-    active: stg
+    active: dev
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://107.167.80.37:3306/qlks_KhoaLuan?autoReconnect=true&useUnicode=true&characterEncoding=utf8
@@ -26,3 +26,11 @@ spring:
 server:
   port: 8000
   contextPath: /hotelManager
+
+mailServer:
+  host: smtp.gmail.com
+  port: 587
+  email: longzip113@gmail.com
+  password: long01645344108
+  protocol: smtp
+  isSSL: false
