--- a/src/main/resources/application-stg.yml
+++ b/src/main/resources/application-stg.yml
@@ -2,9 +2,16 @@ heroku-server:
 spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://107.167.80.37:3306/qlks_KhoaLuan?autoReconnect=true&useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/qlks_KhoaLuan?autoReconnect=true&useUnicode=true&characterEncoding=utf8
     username: long
     password: L@ng250599
   jpa:
     show-sql: true
     generate-ddl: false
+  mailServer:
+    host: smtp.gmail.com
+    port: 587
+    email: hotelmanagerhufi@gmail.com
+    password: long250599
+    protocol: smtp
+    isSSL: false
